# Tosho

./: .gitignore  Cargo.toml  LICENSE  README.md  TUI_README.md
.github/workflows/: realase-and-doc.yml  security-audit.yml
src/: download.rs  error.rs  lib.rs  search.rs  source.rs  tui.rs  types.rs
src/net/: html.rs  json.rs  mod.rs
src/sources/: kissmanga.rs  madara.rs  madara_configurable.rs  mangadex.rs  mod.rs
tests/: README.md  common.rs  download_tests.rs  downloads.rs  integration.rs  sources.rs  unit.rs  unit_tests.rs
