[package]
name = "tosho"
version = "0.1.1"
authors = ["LuMiSxh"]
edition = "2024"
description = "A unified manga source library for Rust"
license = "MIT"
repository = "https://github.com/lumisxh/tosho"
keywords = ["manga", "scraping", "async", "library"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["all-sources"]

# Database compatibility
sqlx = ["dep:sqlx", "chrono"]
chrono = ["dep:chrono"]

# TUI feature (includes conversion functionality)
tui = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:tokio-util",
    "dep:color-eyre",
    "dep:dirs",
    "conversion",
]

# Conversion feature
conversion = ["dep:hozon"]

# Source management
source-mangadex = []
source-kissmanga = []
all-sources = ["source-mangadex", "source-kissmanga"]

[lib]
name = "tosho"
crate-type = ["lib"]

[[bin]]
name = "tosho-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[dependencies]
derive_builder = "0.20"
tokio = { version = "1.4", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "io-util",
] }
async-trait = "0.1"
futures = "0.3"
rayon = "1.11"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
bytes = "1.10"
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
once_cell = "1.21"
parking_lot = "0.12"
urlencoding = "2.1.3"
regex = "1.10"
url = "2.4"
sqlx = { version = "0.7", features = ["chrono"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# TUI dependencies
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
color-eyre = { version = "0.6", optional = true }
dirs = { version = "5.0", optional = true }

# Conversion dependencies
hozon = { git = "https://github.com/lumisxh/hozon", tag = "v0.1.3", optional = true }
