[package]
name = "tosho"
version = "0.2.0"
authors = ["LuMiSxh"]
edition = "2024"
description = "A unified manga source library for Rust"
license = "MIT"
repository = "https://github.com/lumisxh/tosho"
keywords = ["manga", "scraping", "async", "library"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["all-sources"]

# Database compatibility
sqlx = ["dep:sqlx"]
# Specta support
specta = ["dep:specta"]

# Source management
source-mangadex = []
source-kissmanga = []
all-sources = ["source-mangadex", "source-kissmanga"]

[lib]
name = "tosho"
crate-type = ["lib"]

[dependencies]
derive_builder = "0.20"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "io-util",
] }
async-trait = "0.1"
futures = "0.3"
rayon = "1.11"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
bytes = "1.10"
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
once_cell = "1.21"
parking_lot = "0.12"
urlencoding = "2.1"
regex = "1.10"
url = "2.4"
sqlx = { version = "0.8", optional = true }
specta = { version = "=2.0.0-rc.22", default-features = true, features = [
    "serde",
    "serde_json",
    "derive",
], optional = true }
image = { version = "0.25", features = ["jpeg", "png", "webp", "avif"] }
